<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".TranslateActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:id="@+id/languages_list"
                    android:hint="@string/lbl_select_language"
                    />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                >

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:id="@+id/name"
                    android:hint="@string/set_your_name"
                    />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/hard_break_gradient"
            android:clipToPadding="false"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preview"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/secondary_text"/>

        <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="8dp"
                card_view:cardCornerRadius="4dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/primary_text"
                        android:id="@+id/preview_language"
                        android:textSize="18sp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/secondary_text"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:id="@+id/preview_name"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/secondary_text"
                        android:id="@+id/preview_ip_address"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/start_translating"
            android:background="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

        <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_mic_white_24dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_translating"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="#fff"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/connect_to_wifi"
            android:visibility="gone"
            android:background="@color/divider"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

        <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_signal_wifi_off_black_opaque_24dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_connected_to_wifi"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@color/secondary_text"/>

    </LinearLayout>

</LinearLayout>